--- a/assignment/style.css
+++ b/assignment/style.css
@@ -1,11 +1,15 @@
+.first{
+    width:100%;
+    padding: 5px 30px;
+}
 .large{
     width: 100%; 
-    /* height:120px; */
+    /* height:200px; */
     
      display: grid;
   grid-template-columns: 1fr 1fr 1fr 1fr;
   grid-auto-rows: 150px;
-  
+  align-items: center;
   
   grid-gap: 50px;
 
@@ -16,6 +20,11 @@
     background-color: grey;
     /* text-align: left; */
     font-size: 20px;
+    /* align-items: center; */
+    display: flex;
+    justify-items: center;
+    
+    
     
 }
 .bloks:hover{
@@ -23,15 +32,18 @@
     transition: transform .2s;
 }
 .bloks2{
-    width:100%;
-    height: 150px;
-    text-align: center;
+    width:90%;
+    height:100%;
+    display: flex;
+    justify-content: center;
+    position: relative;
     background-color: transparent;
+    padding: 5px;
 }
 .button{
     position: relative;
     /* bottom: 10%; */
-    left: 0%;
+    right: 0%;
     height: 20px;
     width: 20px;
     background-color: indigo;
