--- a/assignment/style.css
+++ b/assignment/style.css
@@ -2,30 +2,40 @@
     width:100%;
     padding: 5px 30px;
 }
+.title1{
+    display: flex;
+    justify-content: left;
+    height: 80px;
+    width: 100%;
+    background-color: rgb(178, 178, 178);
+}
+.title2{
+    width:230px;
+    height:80px;
+    margin:15px;
+}
+.link{
+    text-decoration: none;
+    color: rgb(72, 72, 72);
+}
+.link:hover{
+    text-decoration: none;
+    color: rgb(133, 133, 133);
+}
 .large{
-    width: 100%; 
-    /* height:200px; */
-    
-     display: grid;
+  width: 100%;
+  display: grid;
   grid-template-columns: 1fr 1fr 1fr 1fr;
   grid-auto-rows: 150px;
   align-items: center;
-  
   grid-gap: 50px;
-
 }
 .bloks{
     width:100%;
     height:150px;
-    background-color: grey;
-    /* text-align: left; */
     font-size: 20px;
-    /* align-items: center; */
     display: flex;
-    justify-items: center;
-    
-    
-    
+    justify-items: center;  
 }
 .bloks:hover{
     transform: scale(1.1);
@@ -42,7 +52,6 @@
 }
 .button{
     position: relative;
-    /* bottom: 10%; */
     right: 0%;
     height: 20px;
     width: 20px;
