--- a/assignment/style.css
+++ b/assignment/style.css
@@ -7,7 +7,7 @@
     justify-content: left;
     height: 80px;
     width: 100%;
-    background-color: rgb(178, 178, 178);
+    background-color: #b2b2b2;
 }
 .title2{
     width:230px;
@@ -23,12 +23,41 @@
     color: rgb(133, 133, 133);
 }
 .large{
-  width: 100%;
-  display: grid;
-  grid-template-columns: 1fr 1fr 1fr 1fr;
-  grid-auto-rows: 150px;
-  align-items: center;
-  grid-gap: 50px;
+    width: 100%;
+    display: grid;
+    grid-template-columns: 1fr 1fr 1fr 1fr;
+    grid-auto-rows: 150px;
+    align-items: center;
+    grid-gap: 50px;
+}
+.largeWindow{
+    width: 210px;
+    background-color: white;
+    position: relative;
+    display: flex;
+    justify-content: left;
+}
+.window{
+    width:92%;
+    background-color: rgb(255, 255, 255);
+}
+.inputStyle{
+    margin: 10px;
+}
+.smallerWindow{
+    margin: 10px;
+    border: 5px  solid rgb(85, 85, 85);
+    width: 100%;
+    
+}
+.warning{
+    color: red;
+    font-size: medium;
+    font-weight: 700;
+    margin: 5px;
+}
+.warningText{
+    margin:5px;
 }
 .bloks{
     width:100%;
@@ -57,48 +86,7 @@
     width: 20px;
     background-color: indigo;
     margin: 5px;
-
 }
 .button:hover{
     background-color: rgb(110, 8, 183);
 }
-
-.burtu_lielums{
-    font-size: medium;
-}
-
-/* Izmeginajums */
-.largeWindow{
-    width: 210px;
-    background-color: white;
-    position: relative;
-    display: flex;
-    justify-content: left;
-}
-.window{
-    width:92%;
-    background-color: rgb(255, 255, 255);
-    /* margin:10px; */
-}
-.inputStyle{
-    margin: 10px;
-}
-.smallerWindow{
-    margin: 10px;
-    border: 5px  solid rgb(85, 85, 85);
-    width: 100%;
-    
-}
-.warning{
-    color: red;
-    font-size: medium;
-    font-weight: 700;
-    margin: 5px;
-}
-.warningText{
-    margin:5px;
-}
-
-/* #windowD{
-    
-} */
